2011-04-07	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h, handler/handler0alter.cc:
	Fix Bug #52409 Assertion failure: long semaphore wait

2011-04-07	The InnoDB Team

	* handler/ha_innodb.cc, include/trx0trx.h, include/trx0undo.h,
	log/log0log.c, trx/trx0sys.c, trx/trx0trx.c, trx/trx0undo.c:
	Fix Bug #59641 Prepared XA transaction in system after hard crash
	causes future shutdown hang

2011-03-30	The InnoDB Team

	* srv/srv0srv.c, sync/sync0arr.h, sync/sync0arr.c:
	Fix Bug#11877216 InnoDB too eager to commit suicide on a busy server

2011-03-15	The InnoDB Team

	* btr/btr0cur.c, page/page0zip.c:
	Fix Bug#11849231 inflateInit() invoked without initializing all memory

2011-02-28	The InnoDB Team

	* btr/btr0sea.c, buf/buf0buf.c, buf/buf0lru.c:
	Fix Bug#58549 Race condition in buf_LRU_drop_page_hash_for_tablespace()
	and compressed tables

2011-02-15	The InnoDB Team

	* sync/sync0rw.c, innodb_bug59307.test:
	Bug#59307 Valgrind: uninitialized value in
	rw_lock_set_writer_id_and_recursion_flag()

2011-02-14	The InnoDB Team

	* handler/handler0alter.cc:
	Bug#59749 Enabling concurrent reads while creating non-primary
	unique index gives failures

2011-01-31	The InnoDB Team

	* btr/btr0cur.c, include/row0upd.h,
	row/row0purge.c, row/row0umod.c, row/row0upd.c:
	Bug#59230 assert 0 row_upd_changes_ord_field_binary()
	in post-crash rollback or purge

2011-01-27	The InnoDB Team

	* btr/btr0cur.c:
	Bug#59465 btr_estimate_number_of_different_key_vals use
	incorrect offset for external_size

2011-01-27	The InnoDB Team

	* include/trx0trx.h, trx/trx0trx.c:
	Bug#59440 Race condition in XA ROLLBACK and XA COMMIT
	after server restart

2011-01-25	The InnoDB Team

	* row/row0upd.c:
	Bug#59585 Fix 58912 introduces compiler warning
	due to potentially uninitialized variable

2011-01-25	The InnoDB Team

	* mtr/mtr0log.c:
	Bug#59486 Incorrect usage of UNIV_UNLIKELY() in mlog_parse_string()

2011-01-25	The InnoDB Team

	* row/row0vers.c: